# aryon-env-cli

./: Dockerfile  Makefile  README.md  pyproject.toml  update_version.py
.github/workflows/: docker-build.yml
src/env_cli/: env_data.py  github_wrapper.py  main.py  s3_operations.py
